--- a/PurBeurre.kv
+++ b/PurBeurre.kv
@@ -1,6 +1,7 @@
 # -*- coding: utf-8 -*-
 <FirstScreen>:
     state_lbl : db_state_label
+    db_update_btn: db_update_button
     BoxLayout:
         orientation:'vertical'
         Label:
@@ -8,20 +9,20 @@
             text: root.db_state_text
             size_hint_y: 0.4
         Button:
-            id: 'db_update_button'
-            text:'mettre ‡ jour la base de donnÈes'
+            id: db_update_button
+            text:'mettre √† jour la base de donn√©es'
             size_hint_y:0.2
             on_press: root.async_update_db()
         Button:
-            text:"rechercher un produit alternatif ‡ partir d'un produit existant"
+            text:"rechercher un produit alternatif √† partir d'un produit existant"
             size_hint_y:0.2
             on_press:
-                root.manager.current='categories'
+                root.press_categories()
         Button:
             text:"visualiser les favoris"
             size_hint_y:0.2
             on_press:
-                root.press_categories
+                root.press_favourites()
 
 <ItemView>:
     name : item_name
@@ -43,91 +44,123 @@
                     on_press:
                         root.parent.manager.current="accueil"
                 ActionButton:
-                    text: "prÈcÈdent"
+                    text: "pr√©c√©dent"
                     on_press:
                         root.parent.manager.current="foods"
-        GridLayout:
-            cols:2
-            Label:
-                text: "produit: "
-            Label:
-                id: item_name
-                text: ""
+        ScrollView:
+            GridLayout:
+                cols:2
+                size_hint_y: None
+                # row_force_default: True
+                row_default_height: 40
+                height: self.minimum_height
+                Label:
+                    text: "produit: "
+                Label:
+                    id: item_name
+                    text: ""
 
-            Label:
-                text: "ingredients: "
-            Label:
-                id: item_ingredients
-                text: ""
+                Label:
+                    text: "ingredients: "
 
-            Label:
-                text: "additives: "
-            Label:
-                id: item_additives
-                text: ""
+                Label:
+                    id: item_ingredients
+                    text: ""
+                    size_hint_y: None
+                    text_size: self.width, None
+                    height: self.texture_size[1]
 
-            Label:
-                text: "nutriscore:"
-            Label:
-                id: item_nutriscore
-                text: ""
+                Label:
+                    text: "additives: "
+                Label:
+                    id: item_additives
+                    text: ""
 
-            Label:
-                text: "nutrients"
-            Label:
-                id: item_nutrients
-                text: ""
+                Label:
+                    text: "nutriscore:"
+                Label:
+                    id: item_nutriscore
+                    text: ""
 
-            Label:
-                text: "labels: "
-            Label:
-                id: item_labels
-                text: ""
+                Label:
+                    text: "nutrients"
+                Label:
+                    id: item_nutrients
+                    text: ""
 
-            Label:
-                text: "magasins:"
-            Label:
-                id: item_stores
-                text: ""
+                Label:
+                    text: "labels: "
+                Label:
+                    id: item_labels
+                    text: ""
 
-            Label:
-                text: "barcode"
-            Label:
-                id: item_barcode
-                text: ""
+                Label:
+                    text: "magasins:"
+                Label:
+                    id: item_stores
+                    text: ""
 
-            Button:
-                text: "URL vers openFoodFacts.fr"
-                id :item_url
-                on_press: root.click_link();
+                Label:
+                    text: "barcode"
+                Label:
+                    id: item_barcode
+                    text: ""
 
-            Button:
-                id : favourite_btn
-                text : ""
-                on_press: root.on_click_favorite()
+                Button:
+                    text: "URL vers openFoodFacts.fr"
+                    id :item_url
+                    on_press: root.click_link();
+
+                Button:
+                    id : favourite_btn
+                    text : ""
+                    on_press: root.on_click_favorite()
+        Button:
+            text: "rechercher un substitut"
+            size_hint_y:0.1
+            on_press:
+                root.on_click_substitute()
 
 
 <FoodsListItem@FloatLayout>:
     name: item_name
     details_btn: details_btn
     favourite_btn: favourite_btn
+    image: favourite_btn_image
     BoxLayout:
         pos_hint: {'top': 1}
         size: root.size
         orientation: 'horizontal'
         Label:
             id: item_name
-            size_hint_x:0.5
+            size_hint_x:0.45
         Button:
             id: details_btn
             size_hint_x:0.25
             text: "details"
             on_press:root.on_click_details()
         Button:
-            id: favourite_btn
+            text: "chercher un substitut"
+            on_press:
+                root.on_click_substitute()
             size_hint_x:0.25
+
+        Button:
+            id: favourite_btn
+            size_hint_x:0.05
             on_press:
                 root.on_click_favorite()
+                root.change_fav_image()
+            Image:
+                id: favourite_btn_image
+                source: ""
+                center_x: self.parent.center_x
+                center_y: self.parent.center_y
+                height: self.parent.height*0.75
+                width: self.parent.height*0.75
+                allow_stretch: True
+
+
 
 
 <FoodsList@FloatLayout>:
@@ -142,7 +175,7 @@
                     on_press:
                         root.manager.current="accueil"
                 ActionButton:
-                    text: "prÈcÈdent"
+                    text: "pr√©c√©dent"
                     on_press:
                         root.manager.current="categories"
         ScrollView:
@@ -166,7 +199,7 @@
                     on_press:
                         root.manager.current="accueil"
                 ActionButton:
-                    text: "prÈcÈdent"
+                    text: "pr√©c√©dent"
                     on_press:
                         root.manager.current="accueil"
         ScrollView:
@@ -186,3 +219,87 @@
         size: root.size
         pos_hint: {'top': 1}
         on_press: root.category_click()
+
+
+
+<SubstituteListItem@FloatLayout>:
+    name: item_name
+    details_btn: details_btn
+    favourite_btn: favourite_btn
+    image: favourite_btn_image
+    BoxLayout:
+        pos_hint: {'top': 1}
+        size: root.size
+        orientation: 'horizontal'
+        Label:
+            id: item_name
+            size_hint_x:0.7
+        Button:
+            id: details_btn
+            size_hint_x:0.25
+            text: "details"
+            on_press:root.on_click_details()
+
+        Button:
+            id: favourite_btn
+            size_hint_x:0.05
+            on_press:
+                root.on_click_favorite()
+                root.change_fav_image()
+            Image:
+                id: favourite_btn_image
+                source: ""
+                center_x: self.parent.center_x
+                center_y: self.parent.center_y
+                height: self.parent.height*0.75
+                width: self.parent.height*0.75
+                allow_stretch: True
+
+<SubstitutesList@FloatLayout>:
+    substitutes_layout: substitutes_layout
+    BoxLayout:
+        size: root.size
+        orientation:'vertical'
+        ActionBar:
+            ActionView:
+                ActionPrevious:
+                    title:"Pur Beurre"
+                    on_press:
+                        root.manager.current="accueil"
+                ActionButton:
+                    text: "pr√©c√©dent"
+                    on_press:
+                        root.manager.current="categories"
+        ScrollView:
+            GridLayout:
+                id: substitutes_layout
+                cols: 1
+                size_hint_y: None
+                row_force_default: True
+                row_default_height: 40
+                height: self.minimum_height
+
+<FavouritesList@FloatLayout>:
+    fav_layout: fav_layout
+    BoxLayout:
+        size: root.size
+        orientation:'vertical'
+        ActionBar:
+            ActionView:
+                ActionPrevious:
+                    title:"Pur Beurre"
+                    on_press:
+                        root.manager.current="accueil"
+                ActionButton:
+                    text: "pr√©c√©dent"
+                    on_press:
+                        root.manager.current="accueil"
+        ScrollView:
+            GridLayout:
+                size: root.size
+                id: fav_layout
+                size_hint_y: None
+                cols: 1
+                row_force_default: True
+                row_default_height: 40
+                height: self.minimum_height
