--- a/PurBeurre.kv
+++ b/PurBeurre.kv
@@ -1,4 +1,5 @@
 # -*- coding: utf-8 -*-
+
 <FirstScreen>:
     state_lbl : db_state_label
     db_update_btn: db_update_button
@@ -9,11 +10,6 @@
             text: root.db_state_text
             size_hint_y: 0.4
         Button:
-            id: db_update_button
-            text:'mettre à jour la base de données'
-            size_hint_y:0.2
-            on_press: root.async_update_db()
-        Button:
             text:"rechercher un produit alternatif à partir d'un produit existant"
             size_hint_y:0.2
             on_press:
@@ -23,6 +19,13 @@
             size_hint_y:0.2
             on_press:
                 root.press_favourites()
+
+        Button:
+            id: db_update_button
+            text:'mettre à jour la base de données'
+            size_hint_y:0.2
+            on_press: root.confirmation_popup()
+
 
 <ItemView>:
     name : item_name
@@ -44,14 +47,14 @@
                     on_press:
                         root.parent.manager.current="accueil"
                 ActionButton:
-                    text: "précédent"
+                    text: "liste des produits"
                     on_press:
                         root.parent.manager.current="foods"
         ScrollView:
             GridLayout:
                 cols:2
                 size_hint_y: None
-                row_force_default: True
+#                row_force_default: True
                 row_default_height: 40
                 height: self.minimum_height
                 Label:
@@ -59,6 +62,7 @@
                 Label:
                     id: item_name
                     text: ""
+
 
                 Label:
                     text: "ingredients: "
@@ -68,7 +72,7 @@
                     text: ""
                     size_hint_y: None
                     text_size: self.width, None
-                    height: self.texture_size[1]
+#                    height: self.texture_size[1]
 
                 Label:
                     text: "additives: "
@@ -245,6 +249,7 @@
             on_press:
                 root.on_click_favorite()
                 root.change_fav_image()
+                root.reload_favourite_screen()
             Image:
                 id: favourite_btn_image
                 source: "./ressources/img/unfav_icon.png"
@@ -267,7 +272,7 @@
                 ActionButton:
                     text: "précédent"
                     on_press:
-                        root.manager.current="categories"
+                        root.manager.current="foods"
         ScrollView:
             GridLayout:
                 id: substitutes_layout
