fixed image change on favorite button problem

--- a/PurBeurre.kv
+++ b/PurBeurre.kv
@@ -158,8 +158,8 @@
             Image:
                 id: favourite_btn_image
                 source: "./ressources/img/unfav_icon.png"
-                center_x: self.parent.center_x
-                center_y: self.parent.center_y
+                center_x: self.width and self.parent.center_x
+                center_y: self.height and self.parent.center_y
                 height: 40
                 width: self.parent.height * 0.75
 
@@ -251,8 +251,8 @@
             Image:
                 id: favourite_btn_image
                 source: "./ressources/img/unfav_icon.png"
-                center_x: self.parent.center_x
-                center_y: self.parent.center_y
+                center_x: self.width and self.parent.center_x
+                center_y: self.height and self.parent.center_y
                 height: 40
                 width: self.parent.height * 0.75
 
